<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/user_avatar"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_16"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@id/part_user_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/part_user_info"
        app:shapeAppearanceOverlay="@style/CircleImageView"
        app:srcCompat="@mipmap/ic_launcher_round" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/part_user_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/user_avatar"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/git_name"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/git_login"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/user_bio"
            android:maxLines="3"
            android:scrollbars="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/git_bio"
            android:textSize="@dimen/sp_14" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/part_user_follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/user_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/git_follow"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/git_following"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/user_repos"
                app:layout_constraintStart_toEndOf="@id/user_followers"
                app:layout_constraintTop_toTopOf="parent"
                android:textAlignment="center"
                android:gravity="center"/>

            <TextView
                android:id="@+id/user_repos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/git_repo"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textAlignment="textEnd"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:constraint_referenced_ids="user_name,user_login,user_bio, part_user_follow"
            app:flow_horizontalAlign="start"
            app:flow_verticalGap="@dimen/dp_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>