<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/follower_title"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_32"
        android:background="@drawable/border_top_bottom"
        android:gravity="center"
        android:text="@string/git_follow_title"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/following_title"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_32"
        android:background="@drawable/border_top_bottom"
        android:gravity="center"
        android:text="@string/git_following_title"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold" />

    <com.thanhthienxmp.githubsearch.widget.RecyclerViewEmptySupport
        android:id="@+id/follower_rcy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:itemCount="20"
        tools:listitem="@layout/profile_fragment_follow_item"
        tools:ignore="MissingConstraints" />

    <com.thanhthienxmp.githubsearch.widget.RecyclerViewEmptySupport
        android:id="@+id/following_rcy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:itemCount="20"
        tools:listitem="@layout/profile_fragment_follow_item" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:id="@+id/follower_empty_layout"
        android:gravity="center"
        tools:ignore="MissingConstraints,UseCompoundDrawables">
        <ImageView
            android:id="@+id/follower_empty_image"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:alpha=".6"
            android:contentDescription="@string/app_name"
            android:src="@android:drawable/ic_menu_compass" />
        <TextView
            android:id="@+id/follower_empty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha=".6"
            android:text="@string/none_followers" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:id="@+id/following_empty_layout"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:id="@+id/following_empty_image"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:alpha=".6"
            android:contentDescription="@string/app_name"
            android:src="@android:drawable/ic_menu_sort_by_size" />

        <TextView
            android:id="@+id/following_empty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha=".6"
            android:text="@string/none_following" />
    </LinearLayout>


    <View
        android:layout_width="@dimen/dp_2"
        android:layout_height="0dp"
        android:background="@drawable/single_line_vertical"
        app:layout_constraintStart_toEndOf="@id/follower"
        app:layout_constraintEnd_toStartOf="@id/following"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/divider"
        android:scaleY="1000"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/follower"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:constraint_referenced_ids="follower_title, follower_rcy, follower_empty_layout"
        app:layout_constraintEnd_toStartOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/following"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:constraint_referenced_ids="following_title,following_rcy,following_empty_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/divider"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>